위치 표시 조정,

--- a/index.html
+++ b/index.html
@@ -1,303 +1,8 @@
-Skip to content
-Open sidebar
-
-ChatGPT 4o
-You said:
-나의 대동여지도를 처음부터 만들려고 하는데
-ChatGPT said:
-좋아요 제레미! “나의 대동여지도”를 처음부터 만들고 싶다면, 구현 목적에 따라 순서를 정하고 필요한 기술 요소를 하나씩 준비해가면 좋아요. 전체 프로젝트를 단계별로 나눠 설명해 드릴게요.
-
-✅ 1단계: 프로젝트 기본 구조 세팅하기
-✔ 폴더 구성
-my-daedong-map/
-├── index.html
-├── style.css
-├── script.js
-└── data/
-    └── path-history.json (지나간 길 데이터 저장용)
-✅ 2단계: Leaflet로 기본 지도 띄우기
-📦 필요한 외부 리소스
-Leaflet.js
-
-TailwindCSS (UI 꾸미기 원할 때)
-
-📄 index.html 예시
 <!DOCTYPE html>
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>나의 대동여지도</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <link href="style.css" rel="stylesheet">
-</head>
-<body>
-  <div id="map"></div>
-  <script src="script.js"></script>
-</body>
-</html>
-✅ 3단계: 현재 위치 표시 + 지도에 경로 남기기
-📄 script.js 예시
-const map = L.map('map').setView([37.5665, 126.9780], 13); // 서울 기준
-
-L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-  maxZoom: 18
-}).addTo(map);
-
-// 현재 위치 표시
-navigator.geolocation.watchPosition(position => {
-  const lat = position.coords.latitude;
-  const lng = position.coords.longitude;
-
-  L.marker([lat, lng]).addTo(map)
-    .bindPopup("현재 위치").openPopup();
-
-  // 지도 이동
-  map.setView([lat, lng], 15);
-
-  // 여기에 경로 저장 및 선 그리기 추가
-});
-✅ 4단계: 지나간 길 저장 + 명암 처리
-🎯 아이디어
-하루 전 = 100% 색
-
-10일 전 = 80%
-
-100일 전 = 60%
-
-1000일 전 = 40%
-
-그보다 오래된 경로 = 20%
-
-이건 path-history.json 같은 파일에 날짜와 좌표를 저장하고, 그날짜에 따라 색상을 달리 선을 그리면 됩니다.
-
-✅ 5단계: 레벨업 요소 + 퀘스트 도입 (향후 계획)
-📸 사진의 EXIF 정보로 위치 추적
-
-🧠 Teachable Machine으로 물건 인식
-
-📍 특정 장소에 QR 코드 → 비주얼 노벨 퀘스트
-
-🗺 GPS 기반으로 미션 주기
-
-시작을 도와줄 zip 파일이 필요하신가요?
-“index.html”, “style.css”, “script.js”를 포함한 초기 템플릿 .zip 파일을 만들어드릴 수 있어요. 원하시나요?
-
-또는 바로 GitHub에서 테스트하는 법도 알려드릴 수 있어요.
-
-💬 제레미, 다음 중 무엇부터 도와드릴까요?
-시작용 zip 파일 만들어줘
-
-현재 위치 + 지나간 길 코드를 완성해줘
-
-사진 위치 기반 기능 추가해줘
-
-GitHub에 올리는 방법 알려줘
-
-원하는 걸 말씀해 주세요.
-
-You said:
-시작용 zip 파일 만들어줘
-
-현재 위치 + 지나간 길 코드를 완성해줘
-
-사진 위치 기반 기능 추가해줘
-
-GitHub에 올리는 방법 알려줘
-ChatGPT said:
-여기 제레미를 위한 시작용 ZIP 파일이 준비되었습니다:
-
-👉 my-daedong-map.zip 다운로드
-
-이 안에는 다음 세 파일이 포함되어 있습니다:
-
-index.html : 기본 지도 구조
-
-style.css : 전체 화면 지도를 위한 CSS
-
-script.js : 현재 위치 표시 + 지나간 경로를 선으로 그리는 코드
-
-📸 다음 단계: 사진 위치 기반 기능 추가
-사진을 업로드하면 그 안의 EXIF 정보에서 위도/경도(GPS)를 추출하여 지도에 표시할 수 있습니다.
-
-이건 브라우저에서 다음과 같이 구현할 수 있어요:
-
-사용자가 사진 업로드
-
-EXIF 데이터를 JS로 파싱 (예: exif-js 사용)
-
-위치 데이터가 있으면 지도에 마커 표시
-
-📍 이 기능도 추가된 버전을 원하시면 말씀해주세요.
-
-🚀 GitHub에 올리는 방법
-1. GitHub에 새 레포지토리 만들기
-https://github.com 로 이동 → New Repository
-
-예: my-daedong-map 이름으로 생성
-
-2. Git 설치 및 로컬 폴더 초기화
-git init
-git remote add origin https://github.com/제레미아이디/my-daedong-map.git
-git add .
-git commit -m "처음 커밋"
-git push -u origin master
-혹시 Git 설치와 명령어 사용이 익숙하지 않다면, GitHub Desktop을 사용하면 GUI로 쉽게 가능합니다.
-
-📝 다음 중 어떤 걸 도와드릴까요?
-사진 위치 기반 기능이 포함된 버전 만들어줘
-
-GitHub Desktop 사용법 알려줘
-
-지나간 길에 명암 효과 적용하는 코드로 업그레이드해줘
-
-원하시는 방향을 알려주세요! 
-
-You said:
-지나간 길에 명암 효과 적용하는 코드로 업그레이드해줘
-ChatGPT said:
-제레미, 요청하신 대로 지나간 길에 명암 효과가 적용된 JavaScript 코드를 완성했습니다.
-
-🚶‍♂️ 지나간 경로는 시간 경과에 따라 다음과 같이 밝기가 줄어듭니다:
-
-1일 이내: 100% (완전 흰색)
-
-10일 이내: 80%
-
-100일 이내: 60%
-
-1000일 이내: 40%
-
-그 이상: 20%
-
-각 선 구간은 시간 기준으로 색이 계산되어 지도에 그려집니다.
-
-이제 이 코드를 script.js로 저장하여 프로젝트에 적용하시면 됩니다.
-원하시면 이 코드가 포함된 ZIP 파일도 다시 만들어드릴게요.
-
-다음은 어떤 기능을 추가하고 싶으신가요?
-
-사진 위치 기반 마커 표시 기능
-
-퀘스트/QR 코드 인터랙션
-
-GitHub에 코드 업로드하는 전체 과정 안내
-
-원하는 항목을 알려주세요!
-
-You said:
-Asked ChatGPT
-
-index파일에 복붙 하게 처음부터 다 써줘
-ChatGPT said:
-
-Answer in chat instead
-제레미, 전체 코드를 index.html에 복사해서 붙여 넣을 수 있도록 처음부터 완성된 상태로 바꿔드렸습니다.
-이제 이 파일 하나만 브라우저에서 열면 지도 + 현재 위치 + 지나간 길의 명암 변화까지 바로 확인할 수 있어요.
-
-다음 단계로 어떤 기능을 추가해볼까요?
-
-사진 위치 기반 마커 표시
-
-GitHub에 이 코드 업로드
-
-QR 코드 기반 퀘스트 연동
-
-원하
-
-
-
-
-선택된 파일 없음선택된 파일 없음
-ChatGPT can make mistakes. Check important info.
-
-
-Fade Path Map
-1
-2
-3
-4
-5
-6
-7
-8
-9
-10
-11
-12
-13
-14
-15
-16
-17
-18
-19
-20
-21
-22
-23
-24
-25
-26
-27
-28
-29
-30
-31
-32
-33
-34
-35
-36
-37
-38
-39
-40
-41
-42
-43
-44
-45
-46
-47
-48
-49
-50
-51
-52
-53
-54
-55
-56
-57
-58
-59
-60
-61
-62
-63
-64
-65
-66
-67
-68
-69
-70
-71
-72
-73
-74
-75
-76
-77
-78
-79
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-  <meta charset="UTF-8">
-  <title>나의 대동여지도</title>
+  <title>나의 대동여지도 - Dark</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
@@ -318,11 +23,14 @@ Fade Path Map
   <script>
     const map = L.map('map').setView([37.5665, 126.9780], 13);
 
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      maxZoom: 18,
+    L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
+      attribution: '&copy; <a href="https://carto.com/">CARTO</a>',
+      subdomains: 'abcd',
+      maxZoom: 19
     }).addTo(map);
 
     let path = [];
+    let currentMarker = null;
 
     function getColorByDate(timestamp) {
       const now = new Date();
@@ -344,9 +52,20 @@ Fade Path Map
       const newPoint = { lat, lng, timestamp };
       path.push(newPoint);
 
-      L.marker([lat, lng]).addTo(map).bindPopup("현재 위치").openPopup();
+      // 현재 위치 마커 갱신
+      if (currentMarker) {
+        map.removeLayer(currentMarker);
+      }
+      currentMarker = L.circleMarker([lat, lng], {
+        radius: 6,
+        color: 'lime',
+        fillColor: 'lime',
+        fillOpacity: 1
+      }).addTo(map);
+
       map.setView([lat, lng], 15);
 
+      // 과거 경로 그리기
       if (path.length > 1) {
         const segments = [];
         for (let i = 1; i < path.length; i++) {
@@ -372,4 +91,3 @@ Fade Path Map
   </script>
 </body>
 </html>
-Ask ChatGPT to edit
